--- a/flight-gear-gps/.project
+++ b/flight-gear-gps/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>flight-gear-gps</name>
+	<name>flightgear-gps</name>
 	<comment></comment>
 	<projects>
 	</projects>
