--- a/flight-gear-gps/AndroidManifest.xml
+++ b/flight-gear-gps/AndroidManifest.xml
@@ -15,11 +15,12 @@
             android:theme="@android:style/Theme.NoTitleBar" >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <uses-library android:name="com.google.android.maps" />
+        
+        <activity android:name=".PreferencesActivity" />
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
