--- a/flight-gear-gps/AndroidManifest.xml
+++ b/flight-gear-gps/AndroidManifest.xml
@@ -9,6 +9,8 @@
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
+        <uses-library android:name="com.google.android.maps" />
+        
         <activity
             android:label="@string/app_name"
             android:name=".FlightGearGPSActivity"
@@ -18,9 +20,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <uses-library android:name="com.google.android.maps" />
         
         <activity android:name=".PreferencesActivity" />
+        
+        <activity
+            android:name=".SearchActivity"
+            android:theme="@android:style/Theme.NoTitleBar" >
+        </activity>
+        
     </application>
+    
     <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
