--- a/flight-gear-gps/.classpath
+++ b/flight-gear-gps/.classpath
@@ -10,5 +10,10 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="lib/mapsforge-map-0.3.0-jar-with-dependencies.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="http://mapsforge.googlecode.com/svn/tags/0.3.0/javadoc"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
