--- a/flight-gear-gps/.classpath
+++ b/flight-gear-gps/.classpath
@@ -1,19 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="src" output="bin/classes" path="gen">
 		<attributes>
 			<attribute name="optional" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="lib/mapsforge-map-0.3.0-jar-with-dependencies.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="http://mapsforge.googlecode.com/svn/tags/0.3.0/javadoc"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="src" output="bin/classes" path="src/main/java"/>
+	<classpathentry kind="src" output="bin/classes" path="src/test/java"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
